fix: zgc 笔记补到 ≥ 400 行（附录 A 参数速查 + 附录 B GC log 字段）